k8s-files/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-svc
spec:
  selector:
    app: flask-k8s
  ports:
  - name: http
    port: 80
    targetPort: 80
